--- a/Developpement/templates/other/testjs.html
+++ b/Developpement/templates/other/testjs.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
+<!-- Creation d'un boite de texte qui change automatiquement le contenue d'une balise <p>  -->
 <script type="text/javascript">
 function preview(){
   document.getElementById("para").textContent =   document.getElementById("a").value;
@@ -8,17 +9,13 @@ var myvar;
 function m(){
 myvar = setInterval('preview()',1000);
 }
-
 </script>
 <body onLoad="m()">
-
-
-
-
-
 <textarea id="a" rows="4" cols="50">
 </textarea>
-
 <p id="para"></p>
+
+
 </body>
+
 {% endblock %}
