--- a/Developpement/templates/other/page_liens.html
+++ b/Developpement/templates/other/page_liens.html
@@ -26,7 +26,7 @@
   <div class="liste-partenaires">
     <div>
       <a href="https://clarenpic.blog4ever.com/">
-        <img src="{{ url_for('static',filename='img/logo-clarinette-picardie.jpg') }}" alt="picardie clarinette logo" id="logo-partenaires">
+        <img src="{{ url_for('static',filename='img/logo-clarinette-picardie.png') }}" alt="picardie clarinette logo" id="logo-partenaires">
         <strong>
           <p>Club de Clarinette en Picardie</p>
         </strong>
