--- a/Developpement/templates/clarinette/clarinette_historique.html
+++ b/Developpement/templates/clarinette/clarinette_historique.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/base.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/clarinette/clarinette_historique.css')}}">
 <div class="quatuor-clarinette">
   <h1 class="titre-gpartie">Présentation de la clarinette</h1>
   <div class="presentation-gdiv">
@@ -41,7 +43,7 @@
           abiecisse et morte voluntaria necessariam turpitudinem depulisse.
           Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc
           sine teste dico.</p>
-  
+
       </div>
     </div>
   </div>
