--- a/Developpement/templates/quatuor/quatuor_concerts.html
+++ b/Developpement/templates/quatuor/quatuor_concerts.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_concerts.css')}}">
 {% block main %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/base.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_concerts.css')}}">
 <div class="quatuor-concert">
   <h1 class="titre-gpartie">Concerts</h1>
   <div class="quatuor-concert-gpartie">
