--- a/Developpement/templates/quatuor/quatuor_presse_all.html
+++ b/Developpement/templates/quatuor/quatuor_presse_all.html
@@ -1,6 +1,7 @@
 {% extends "quatuor/quatuor_presse_actu.html" %}
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_presse_all.css')}}">
 {% block presse %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/base.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_presse_all.css')}}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <div class="container  liste-article">
