--- a/Developpement/static/styles/css/quatuor/quatuor_presse_all.css
+++ b/Developpement/static/styles/css/quatuor/quatuor_presse_all.css
@@ -8,19 +8,14 @@
     width: 100%;
     margin : auto;
     z-index: 200;
-
 }
-
 #blocImage {
     width : 100%;
 }
-
-
 #blocImage img{
   width: 20em;
   height: 10em;
   border-radius: 2%;
-
 }
 .liste-article{
   margin-top: 5%
@@ -35,4 +30,7 @@
 .presse-paire{
   background-color: rgba(175, 175, 175, 0.52);
   border-radius: 1.5%;
+}
+.center{
+  text-align: center;
 }
