--- a/Developpement/templates/quatuor/quatuor_repertoire.html
+++ b/Developpement/templates/quatuor/quatuor_repertoire.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/base.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_repertoire.css')}}">
 
 
 {% endblock %}
