--- a/Developpement/templates/stage/stage_paiement.html
+++ b/Developpement/templates/stage/stage_paiement.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/stage_paiement.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/base.css')}}">
 
 {% endblock %}
