--- a/Developpement/templates/quatuor/quatuor_presse_actu.html
+++ b/Developpement/templates/quatuor/quatuor_presse_actu.html
@@ -60,11 +60,11 @@
     <span class="sr-only">Suivant</span>
   </a>
 </div>
-
+<a href="/quatuor/presse/all" style="margin-left:46%;"> Touts les articles</a>
 
 {% block presse %}
 
 {% endblock %}
 
-
+ 
 {% endblock %}
