--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -12,27 +12,23 @@
 <div class="navbar-fixed-top collapse navbar-collapse" id="bs-example-navbar-collapse-1" role="navigation">
       <ul class="nav navbar-nav">
         <a class="navbar-brand" href="/"><img src="{{ url_for('static',filename='img/diverti.png') }}" alt="diverti.png" class="img-accueil"> </a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="dropdown tab-home">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Quatuor<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="/quatuor/presentation/">Présentation</a></li>
-                <li><a href="/quatuor/repertoire/">Repertoire</a></li>
-                <li><a href="/quatuor/extrait/0">Extrait</a></li>
-                <li><a href="/quatuor/concerts/">Concerts</a></li>
-                <li><a href="/quatuor/presse/all/0">Presse</a></li>
-              </ul>
-            </li>
-            <li class="dropdown tab-home">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Stage<span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="/stage/presentation/">Présentation</a></li>
-                  <li><a href="/stage/inscription/">Inscription</a></li>
-                  <li><a href="/stage/programmes/">Programmes</a></li>
-                  <li><a href="/stage/presse/">Presse</a></li>
-                  <li><a href="/stage/recettes/">Recettes</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Quatuor <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/quatuor/presentation/">Présentation</a></li>
+            <li><a href="/quatuor/repertoire/">Repertoire</a></li>
+            <li><a href="/quatuor/extrait/0">Extrait</a></li>
+            <li><a href="/quatuor/presse/all/0">Presse</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Stage <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/stage/presentation/">Présentation</a></li>
+            <li><a href="/stage/inscription/">Inscription</a></li>
+            <li><a href="/stage/programmes/">Programmes</a></li>
+            <li><a href="/stage/presse/">Presse</a></li>
+            <li><a href="/stage/recettes/">Recettes</a></li>
 
             {% if current_user.is_authenticated %}
 
@@ -89,3 +85,4 @@ $(function() {
 })
 </script>
 {% endblock %}
+ 
