--- a/Developpement/templates/other/page_liens.html
+++ b/Developpement/templates/other/page_liens.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
-
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/autre/liens.css')}}">
 <h1>Liens</h1>
 
 <br>
