Resolution des problemes de CSS.

--- a/Developpement/templates/contact/contact_ficheTechnique.html
+++ b/Developpement/templates/contact/contact_ficheTechnique.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/contact/fichetechnique.css')}}">
+
 <div class="liens">
   <h2 id="hliens">Fiche Technique Concerts</h2>
   <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
