--- a/Developpement/templates/contact/contact_renseignements.html
+++ b/Developpement/templates/contact/contact_renseignements.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/contact/renseignements.css')}}">
+
 <h1>Renseignements</h1>
 <div class="liens">
   <h2 id="hliens">Les Membres</h2>
