--- a/Developpement/templates/other/page_liens.html
+++ b/Developpement/templates/other/page_liens.html
@@ -19,7 +19,7 @@
   </div>
 </div>
 
-<div class="partenaires">
+<div class="partenaires liens">
   <h2 id="hliens">Nos partenaires</h2>
   <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
   <br>
@@ -43,7 +43,7 @@
   </div>
 </div>
 
-<div class="partenaires">
+<div class="partenaires liens">
   <h2 id="hliens">Nos magasins conseillés</h2>
   <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
   <br>
