--- a/Developpement/static/styles/css/contact/renseignements.css
+++ b/Developpement/static/styles/css/contact/renseignements.css
@@ -48,6 +48,20 @@
   width:16%;
   margin-top:-1.5%;
 }
+
 .liens{
   text-align: center;
+}
+
+
+.list-profs>ul{
+  list-style-type: none;
+  margin-left: 3.5%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.list-profs li{
+  padding: 3.5%;
+  text-align: center;
+  margin-top: 2%;
 }
