--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -15,6 +15,7 @@
 body{
   background-image: url("../../img/imgFond.png");
   background-repeat: no-repeat;
+  background-size: cover;
   background-attachment: fixed;
 }
 
