--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -29,6 +29,33 @@
         <li><a href="/stage/programmes/">Programmes</a></li>
         <li><a href="/stage/presse/">Presse</a></li>
         <li><a href="/stage/recettes/">Recettes</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#codebrainery-toggle-nav" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <a class="navbar-brand" href="/"><img src="{{ url_for('static',filename='img/diverti.png') }}" alt="diverti.png" class="img-accueil"> </a>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Quatuor <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/quatuor/presentation/">Présentation</a></li>
+            <li><a href="/quatuor/repertoire/">Repertoire</a></li>
+            <li><a href="/quatuor/extrait/0">Extrait</a></li>
+            <li><a href="/quatuor/presse/all/0">Presse</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Stage <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/stage/presentation/">Présentation</a></li>
+            <li><a href="/stage/inscription/">Inscription</a></li>
+            <li><a href="/stage/programmes/">Programmes</a></li>
+            <li><a href="/stage/presse/">Presse</a></li>
+            <li><a href="/stage/recettes/">Recettes</a></li>
 
         {% if current_user.is_authenticated %}
 
