--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -9,8 +9,14 @@
 {% endblock %}
 
 {% block navbar %}
-<nav class="navbar-fixed-top collapse navbar-collapse" id="bs-example-navbar-collapse-1" role="navigation">
-      <ul class="nav navbar-nav">
+<nav class="navbar navbar-fixed-top collapse navbar-collapse" role="navigation">
+      <ul class="nav navbar-nav navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#codebrainery-toggle-nav" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
         <a class="navbar-brand" href="/"><img src="{{ url_for('static',filename='img/diverti.png') }}" alt="diverti.png" class="img-accueil"> </a>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Quatuor <b class="caret"></b></a>
