Amelioration CSS page presentation

--- a/Developpement/templates/quatuor/quatuor_presentation.html
+++ b/Developpement/templates/quatuor/quatuor_presentation.html
@@ -5,11 +5,12 @@
 <div class="quatuor-presentation">
   <h1 class="titre-gpartie">Presentation</h1>
   <div class="presentation-gdiv">
+    <h1>Le Quatuor</h1>
     <div class="presentation-div">
       <img class="presentation-img" src="{{ url_for('static',filename='img/presentation-quatuor-1.png') }}" alt="">
       <div class="presentation-text">
-        <p>Le quatuor</p>
       </div>
+      <div class="group-text-droite fond-text">
       <div class="presentation-text">
         <p>
           Né en 1998 de la complicité et de l'amitié de quatre clarinettistes professionnels, tous titulaires d'un premier prix de l'E.N.M. d'Orléans dans la classe de Michel ARRIGNON et du diplôme d'état de professeur de clarinette, le quatuor
@@ -17,7 +18,9 @@
         </p>
       </div>
     </div>
+    </div>
     <div class="presentation-div">
+      <div class="group-text-gauche fond-text">
       <div class="presentation-text">
         <p>
           Par la diversité de son répertoire, allant de la Renaissance à l'époque contemporaine, en passant par le jazz et la musique populaire, le quatuor "Divertimento" se donne pour objectifs l'élaboration et la présentation d'un programme
@@ -31,8 +34,10 @@
           régional du Centre dans le cadre de sa politique de développement artistique et culturel.
         </p>
       </div>
+      </div>
       <img class="presentation-img" src="{{ url_for('static',filename='img/presentation-quatuor-2.png') }}" alt="">
     </div>
+
   </div>
 
   <h1 class="titre-gpartie">Les Membres</h1>
