--- a/Developpement/static/styles/css/quatuor/quatuor_presentation.css
+++ b/Developpement/static/styles/css/quatuor/quatuor_presentation.css
@@ -24,8 +24,8 @@
   margin-bottom: 5%
 }
 .presentation-img{
-  height: 100%;
-  width: 100%;
+  height: 15em;
+  width: 20em;
   border-radius: 5%;
   margin-right: 2.5%;
   margin-left: 2.5%;
@@ -33,5 +33,18 @@
 .presentation-text{
   font-family: Verdana,sans-serif;
   font-size: 15px;
+  margin-top: 1%
 }
- 
+
+.group-text-gauche{
+  margin-left: 10%
+}
+
+.group-text-droite{
+  margin-right: 10%
+}
+
+.fond-text{
+  background-color: rgba(212, 212, 212, 0.13);
+  border-radius : 1%
+}
