--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -40,7 +40,7 @@
         {% endif %}
       </ul>
     </li>
-    <li><a class="dropdown-toggle" href="/quatuor/concerts/">Concerts</a></li>
+    <li><a class="dropdown-toggle" href="/other/concerts/">Concerts</a></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Autour de la clarinette <b class="caret"></b></a>
       <ul class="dropdown-menu">
