--- a/Developpement/static/styles/css/stage/stage_recettes.css
+++ b/Developpement/static/styles/css/stage/stage_recettes.css
@@ -1,26 +1,104 @@
-ul.nav-pills {
-  margin-top: 20%;
-  position: fixed;
-}
-div.col-sm-9 div {
-  height: 250px;
-  font-size: 28px;
-}
-.sous_menu{
-  margin-top: 10%;
-}
-.nav-pills > li.active > a, .nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
-  color: #fff;
-  background-color: #337ab7;
-}
-.nav > li > a {
-    position: relative;
-    display: block;
-    padding: 10px 15px;
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700);
+html,
+body {
+  font-family: 'Open Sans', sans-serif;
+  color: #444;
+  line-height: 1.8;
+  font-weight: 300;
+  font-size: 100%;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
 }
 
-@media screen and (max-width: 810px) {
-  #entree, #plat, #dessert, #sucre, #sel  {
-    margin-left: 150px;
-  }
+h1 {
+  font-size: 190%;
+  margin: 0;
+}
+
+.titre{
+  text-align: center;
+}
+
+h3{
+  text-align: center;
+}
+
+header section {
+  position: relative;
+  width: 90%;
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+article {
+  width: 90%;
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+.container {
+  position: relative;
+  width: 90%;
+  max-width: 1080px;
+  margin: 30px auto 0 auto;
+  padding-bottom: 500px;
+}
+
+.container article {
+  padding: 70px 0 0 0;
+}
+
+.row{
+  margin-top: 5%;
+}
+
+.glyphicon-save{
+  color: red;
+}
+
+/* Nav */
+
+nav {
+  padding-top: 4%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: auto;
+  background: rgba(0, 0, 0, 0.9);
+  z-index: 999;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  display: block;
+  text-align: center;
+}
+
+nav li {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+}
+
+nav li a {
+  display: block;
+  padding: 20px;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all .3s ease-in-out;
+  font-size: 90%;
+  font-size: 600;
+}
+
+nav li a:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+#navbar .active a {
+  background: rgb(0, 157, 234);
 }
