--- a/Developpement/templates/stage/stage_recettes.html
+++ b/Developpement/templates/stage/stage_recettes.html
@@ -2,55 +2,100 @@
 {% block main %}
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/stage_recettes.css')}}">
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/base.css')}}">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<body>
-<div class="container" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-  <div class="row">
-    <nav class="col-sm-3" id="myScrollspy">
-      <ul class="nav nav-pills nav-stacked">
-        <li class="dropdown active">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Recettes par catégories <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#entree">Entrée</a></li>
-            <li><a href="#plat">Plat Principal</a></li>
-            <li><a href="#dessert">Dessert</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Recettes par saveurs <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#sucre">Sucré</a></li>
-            <li><a href="#sel">Salé</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-    <div class="col-sm-9">
-      <div class="sous_menu" id="entree">
+<script type="text/javascript">
+  // Mon code Javascript
+  // Scroller
+$(function(){
+  $('a[href*=#]').click(function() {
+  if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+          var $target = $(this.hash);
+          $target = $target.length && $target || $('[name=' + this.hash.slice(1) +']');
+          if ($target.length) {
+              var targetOffset = $target.offset().top -0;
+              $('html,body').animate({scrollTop: targetOffset}, 300);
+              return false;
+          }
+      }
+  });
+});
+</script>
+
+
+<body data-spy="scroll" data-target="#navbar">
+  <header>
+    <section>
+      <nav id="navbar">
+        <ul class="nav">
+          <li><a href="#entree">Les Entrées</a></li>
+          <li><a href="#plat">Les Plats Principaux</a></li>
+          <li><a href="#dessert">Les Desserts</a></li>
+          <li><a href="#sucre">Plats Sucrés</a></li>
+          <li><a href="#sel">Plats Salés</a></li>
+        </ul>
+      </nav>
+    </section>
+  </header>
+  <section class="container">
+    <article id="entree">
+      <div class="titre">
         <h1>Les Entrées</h1>
-        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+        <img src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
-      <div class="sous_menu" id="plat">
-        <h1>Les Plats</h1>
-        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-      </div>
-      <div class="sous_menu" id="dessert">
-        <h1>Les Desserts</h1>
-        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-      </div>
-      <div class="sous_menu" id="sucre">
-        <h1>Plats Sucrés</h1>
-        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-      </div>
-      <div class="sous_menu" id="sel">
-        <h1>Plats Salés</h1>
-        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-      </div>
-    </div>
-  </div>
-</div>
+      <div class="row">
+          <div class="col-sm-6 col-sm-6">
+            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
+            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+          </div>
+          <div class="col-sm-6 col-sm-6">
+            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+            <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-sm-6">
+              <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
+              <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            </div>
+            <div class="col-sm-6 col-sm-6">
+              <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
+              <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+          </div>
+    </article>
+    <article id="plat">
+      <h1>Les Plats Principaux</h1>
+      <p>Donec nunc urna, tempus in dui et, luctus pretium diam. Donec ac facilisis lacus. Nunc vestibulum suscipit nibh sit amet efficitur. In eget dignissim augue. Suspendisse semper augue sollicitudin auctor commodo. Aenean a condimentum diam. In sit
+        amet lacus fringilla, tempor mi ac, ornare erat. Etiam tincidunt ante nisi, et ultrices orci varius sit amet. Etiam a ipsum dictum, lacinia lectus at, tristique enim.
+        <p>
+          <p>Mauris in quam eu libero bibendum lacinia. Pellentesque ac odio sit amet velit ornare efficitur. Duis suscipit orci non lacus efficitur luctus. Proin at odio egestas velit facilisis pulvinar vel eget sem. Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus mus. Praesent pharetra viverra nulla, et dictum nisl efficitur in.</p>
+    </article>
+    <article id="dessert">
+
+      <h1>Les Desserts</h1>
+      <p>Donec nunc urna, tempus in dui et, luctus pretium diam. Donec ac facilisis lacus. Nunc vestibulum suscipit nibh sit amet efficitur. In eget dignissim augue. Suspendisse semper augue sollicitudin auctor commodo. Aenean a condimentum diam. In sit
+        amet lacus fringilla, tempor mi ac, ornare erat. Etiam tincidunt ante nisi, et ultrices orci varius sit amet. Etiam a ipsum dictum, lacinia lectus at, tristique enim.
+        <p>
+          <p>Mauris in quam eu libero bibendum lacinia. Pellentesque ac odio sit amet velit ornare efficitur. Duis suscipit orci non lacus efficitur luctus. Proin at odio egestas velit facilisis pulvinar vel eget sem. Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus mus. Praesent pharetra viverra nulla, et dictum nisl efficitur in.</p>
+    </article>
+    <article id="sucre">
+      <h1>Plats Sucrés</h1>
+      <p>Donec nunc urna, tempus in dui et, luctus pretium diam. Donec ac facilisis lacus. Nunc vestibulum suscipit nibh sit amet efficitur. In eget dignissim augue. Suspendisse semper augue sollicitudin auctor commodo. Aenean a condimentum diam. In sit
+        amet lacus fringilla, tempor mi ac, ornare erat. Etiam tincidunt ante nisi, et ultrices orci varius sit amet. Etiam a ipsum dictum, lacinia lectus at, tristique enim.
+        <p>
+          <p>Mauris in quam eu libero bibendum lacinia. Pellentesque ac odio sit amet velit ornare efficitur. Duis suscipit orci non lacus efficitur luctus. Proin at odio egestas velit facilisis pulvinar vel eget sem. Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus mus. Praesent pharetra viverra nulla, et dictum nisl efficitur in.</p>
+    </article>
+    <article id="sel">
+      <h1>Plats Salés</h1>
+      <p>Donec nunc urna, tempus in dui et, luctus pretium diam. Donec ac facilisis lacus. Nunc vestibulum suscipit nibh sit amet efficitur. In eget dignissim augue. Suspendisse semper augue sollicitudin auctor commodo. Aenean a condimentum diam. In sit
+        amet lacus fringilla, tempor mi ac, ornare erat. Etiam tincidunt ante nisi, et ultrices orci varius sit amet. Etiam a ipsum dictum, lacinia lectus at, tristique enim.
+        <p>
+          <p>Mauris in quam eu libero bibendum lacinia. Pellentesque ac odio sit amet velit ornare efficitur. Duis suscipit orci non lacus efficitur luctus. Proin at odio egestas velit facilisis pulvinar vel eget sem. Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus mus. Praesent pharetra viverra nulla, et dictum nisl efficitur in.</p>
+    </article>
+  </section>
 </body>
 
 {% endblock %}
